    or the proper laser type.
  Fixed de_de.json language files. Fixed "Lasers" and "Auto Shutoff" not being translated.
    See: https://github.com/ADDSynth/Overpowered-Forge-1.14/commit/5f4418eadb862447e4b58be2b637d0f230d717f4
  Fixed Energy Suspension Bridge maximum length was actually 1 less than what is set
    in the configuration.



v1.4.2 - June 15, 2022
NEW:
  Added an alternate crafting recipe for the Inverter.
  Added Project E EMC values to Silicon and the Circuit items.
  The drawn ItemStacks in the Portal Control Panel gui now cycle between all
    valid Gem Blocks that can be accepted in the Portal Frames, and also show
    an Item tooltip if you mouse over them, just like the drawn ItemStacks in
    the Circuit Fabricator gui.
  Added Issue Tracker to the mods.toml file.
CHANGED:
  The Fusion Core is now crafted with Blaze Powder instead of Fire Charges.
  Power Cycle time (Portal Control Panel & Crystal Matter Generator) is now
    drawn with the status message instead of using the work percentage.
  Removed Crafting Table as a trigger for the Circuit Fabricator recipe advancement
    so players don't unlock the recipe so early in the game.
FIXED:
  Fixed es_es.json language files.
  Efficiency text in the Crystal Matter Generator was overlapping itself.
  Fixed the drawn ItemStacks in the Circuit Fabricator gui glitching while the
    machine was running.
  Fixed text in Rotate button of the Energy Suspension Bridge was misaligned.
KNOWN PROBLEMS:
  Batteries' Time to Full Charge isn't calculated correctly if they're not all
    connected to Energy Wire.
    - This is because the Batteries are on a separate Energy Network and their
      energy is balanced across all batteries, but the gui only checks the Energy
      object of THAT battery.



v1.4.1 - January 6, 2022
NEW:
  Added 2 commands to ADDSynthCore that help in determining the number of ore blocks
    in a given area. Mostly useful to developers.